--- a/Frontend/stayfit/public/styles.css
+++ b/Frontend/stayfit/public/styles.css
@@ -1173,7 +1173,7 @@ p {
 #pricing .pricing-card:focus {
   transform: translateY(-10px);
 }
-#pricing .pricing-card .header {
+#pricing .pricing-card .heading {
   margin: 0 0 60px;
 }
 #pricing .pricing-card .title {
@@ -1398,4 +1398,918 @@ p {
 #footer .copyright p {
   color: rgba(255, 255, 255, 0.4);
   font-size: 17px;
+}
+
+/* SignIn & SignUp */
+
+.auth {
+  padding: 3em 0;
+  position: relative;
+  width: 100%;
+  z-index: 0;
+}
+.auth .overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  content: "";
+  opacity: 0.1;
+  background-color: #1c2938;
+  z-index: -1;
+}
+.auth .heading {
+  font-size: 50px;
+  font-weight: 600;
+  color: #fff;
+}
+.auth .login-card {
+  position: relative;
+  border-radius: 10px;
+  background-color: rgb(28, 41, 56, 0.4);
+  padding: 40px;
+  padding-bottom: 10px;
+}
+.auth .login-card h3 {
+  font-weight: 300;
+  color: #fff;
+}
+.auth .login-card .form-control {
+  background: transparent;
+  border: none;
+  height: 50px;
+  color: white !important;
+  border: 1px solid transparent;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
+  transition: 0.3s;
+}
+.auth .login-card .form-control:hover,
+.auth .login-card .form-control:focus {
+  background: transparent;
+  outline: none;
+  box-shadow: none;
+  border-color: rgba(255, 255, 255, 0.4);
+}
+.auth .login-card .form-control::placeholder {
+  color: #fff;
+}
+.auth .login-card .pass-icon-login {
+  position: absolute;
+  top: 37.5%;
+  right: 55px;
+  transform: translateY(-50%);
+  color: #fff;
+}
+.auth .login-card .pass-icon-register {
+  position: absolute;
+  top: 61.5%;
+  right: 55px;
+  transform: translateY(-50%);
+  color: #fff;
+}
+.auth .login-card .form-check-input {
+  box-shadow: none;
+  border: none;
+  margin-top: 5px;
+  opacity: 0.4;
+}
+.auth .login-card .form-check-input:checked {
+  background-color: #1c2938;
+  opacity: 1;
+}
+.auth .login-card .form-check-label {
+  color: #fff;
+}
+.auth .login-card .pass-link {
+  color: #fff;
+}
+.auth .login-card .pass-link:hover {
+  color: #1c2938;
+}
+.auth .login-card .btn {
+  cursor: pointer;
+  border-radius: 40px;
+  box-shadow: none !important;
+  font-size: 16px;
+  text-transform: uppercase;
+  color: #000000 !important;
+  background-color: rgb(255, 255, 255, 0.6);
+}
+.auth .login-card .btn:hover {
+  border: 1px solid #1c2938;
+  background: #1c2938;
+  color: #fff !important;
+}
+.auth .login-card p {
+  color: #fff;
+}
+.auth .login-card .social {
+  width: 100%;
+}
+.auth .login-card .social a {
+  width: 100%;
+  display: block;
+  color: #000000;
+  background: rgb(255, 255, 255, 0.6);
+}
+.auth .login-card .social a:hover {
+  background: #1c2938;
+  color: #fff;
+}
+.auth .login-card p {
+  font-size: 18px;
+}
+.auth .login-card .signup-link {
+  color: #fff;
+  font-size: 18px;
+}
+.auth .login-card .signup-link:hover {
+  color: #1c2938;
+}
+.auth .radio-tile-group {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.auth .pricing-card {
+  position: relative;
+  height: 7rem;
+  width: 7rem;
+  margin: 0 15px 15px;
+}
+.auth .radio-button {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  cursor: pointer;
+}
+.auth .radio-tile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(255, 255, 255, 0.6);
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+}
+.auth .pricing-info .period,
+.auth .pricing-info .value {
+  color: #000000 !important;
+}
+.radio-button:checked + .radio-tile {
+  background-color: #fff;
+}
+.auth .login-card .validated {
+  background-color: green;
+}
+.auth .login-card .validated:hover {
+  background-color: green;
+  border: 2px solid green;
+  color: #000000 !important;
+}
+.auth .login-card .not-validated {
+  background-color: red;
+}
+.auth .login-card .not-validated:hover {
+  background-color: red;
+  border: 2px solid red;
+  color: #000000 !important;
+}
+
+/* Header & Sidebar */
+
+.header {
+  width: 100%;
+  height: 3rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1rem;
+  z-index: 100;
+  transition: 0.5s;
+  background-image: linear-gradient(to right, #cd3f3e 0%, #1c2938 100%);
+}
+.header .toggle {
+  color: #1c2938;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+.header a img {
+  width: 35px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: -30%;
+  width: 73px;
+  height: 100vh;
+  background-color: #1c2938;
+  box-shadow: 0 0 15px 0 #1c2938;
+  padding: 13px 10px 0 0;
+  transition: 0.5s;
+  z-index: 100;
+}
+.sidebar .nav {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: hidden;
+}
+.sidebar .nav_logo,
+.sidebar .nav_link {
+  display: grid;
+  grid-template-columns: max-content max-content;
+  align-items: center;
+  column-gap: 1rem;
+  padding: 0.5rem 0 0.5rem 1.5rem;
+}
+.sidebar .nav_logo {
+  margin-bottom: 3rem;
+  padding: 0 0 0 16px;
+}
+.sidebar .nav_logo .img-fluid {
+  max-height: 40px;
+  width: 40px;
+}
+.sidebar .nav_logo .name {
+  color: #cd3f3e;
+  font-size: 25px;
+  padding-top: 5px;
+}
+.sidebar .nav_link {
+  position: relative;
+  color: #fff;
+  margin-bottom: 1.5rem;
+  transition: 0.3s;
+}
+.sidebar .nav_link:hover {
+  color: #cd3f3e;
+}
+.sidebar .active {
+  color: #cd3f3e;
+}
+.sidebar .active::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 2px;
+  height: 32px;
+  background-color: #cd3f3e;
+}
+.show {
+  left: 0;
+}
+.pd-header {
+  padding-left: 85px;
+}
+@media (min-width: 768px) {
+  .header {
+    height: 4rem;
+    padding: 0 2rem 0 6rem;
+  }
+  .header a img {
+    width: 45px;
+    height: 45px;
+  }
+  .sidebar {
+    left: 0;
+  }
+  .show {
+    width: 190px;
+  }
+  .pd-header {
+    padding-left: 215px;
+  }
+}
+
+/* Dashboard */
+
+.content-background {
+  background-image: url("https://images.unsplash.com/photo-1471506480208-91b3a4cc78be?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2074&q=80"); /* Replace 'your-image.jpg' with the URL of your background image */
+  background-size: cover;
+  background-attachment: fixed;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.6;
+}
+#dashboard .card {
+  height: 470px;
+}
+
+/* Profile */
+#dashboard .heading {
+  background-image: linear-gradient(to right, #cd3f3e 0%, #1c2938 100%);
+  padding: 1rem 0 3rem;
+}
+#dashboard .sections {
+  margin-top: -3rem;
+}
+@media (min-width: 1537px) {
+  #dashboard .sections {
+    margin-top: 3rem;
+  }
+}
+#dashboard .card {
+  box-shadow: 0 0 20px 0 rgb(28, 41, 56, 0.9);
+  background-color: #f4f6f6;
+}
+#dashboard .profile img {
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  object-fit: cover;
+}
+#dashboard .active {
+  color: green;
+}
+/* Calendar Wrapper */
+#dashboard .react-calendar {
+  padding: 10px 0;
+  background-color: #f4f6f6;
+}
+#dashboard .react-calendar__navigation {
+  margin-bottom: 10px;
+}
+#dashboard .react-calendar__navigation__label {
+  font-size: 20px;
+}
+#dashboard .react-calendar__navigation__label:hover {
+  color: #cd3f3e;
+  background-color: #f4f6f6 !important;
+}
+#dashboard .react-calendar__navigation__prev2-button,
+#dashboard .react-calendar__navigation__next2-button,
+#dashboard .react-calendar__navigation__prev-button,
+#dashboard .react-calendar__navigation__next-button {
+  cursor: pointer;
+  text-align: center;
+  transition: 0.3s;
+  font-size: 30px !important;
+}
+#dashboard .react-calendar__navigation__prev2-button:hover,
+#dashboard .react-calendar__navigation__next2-button:hover,
+#dashboard .react-calendar__navigation__prev-button:hover,
+#dashboard .react-calendar__navigation__next-button:hover {
+  color: #cd3f3e !important;
+  background-color: #f4f6f6 !important;
+}
+#dashboard .react-calendar__tile {
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+  border: 2px solid transparent;
+  transition: all 250ms;
+}
+#dashboard .react-calendar__tile:hover {
+  background-color: #f4f6f6;
+  border: 2px solid #1c2938;
+}
+#dashboard .react-calendar__tile--now {
+  background-color: #f4f6f6;
+  border: 2px solid #cd3f3e;
+}
+#dashboard .react-calendar__tile--active {
+  background-color: #1c2938 !important;
+  border: 2px solid #1c2938;
+  border-radius: 50%;
+  width: 80%;
+}
+#dashboard abbr {
+  text-decoration: none;
+  cursor: inherit;
+}
+#dashboard .event-date {
+  background-color: #f4f6f6;
+}
+#dashboard .event-date:after {
+  position: absolute;
+  margin-left: -27px;
+  margin-top: -14px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  content: "";
+  background: #cd3f3e;
+}
+#dashboard .calendar .month {
+  cursor: default;
+  height: 26px;
+  width: 26px;
+  padding: 0 2px;
+  padding-top: 10px;
+  line-height: 26px;
+  text-transform: uppercase;
+  font-size: 11px;
+  color: #cccccc;
+  transition: all 250ms;
+}
+#dashboard .calendar .active-month {
+  font-weight: 700;
+  color: #000;
+}
+#dashboard .calendar .month:hover {
+  color: #cd3f3e;
+}
+#dashboard .react-calendar__month-view__weekdays__weekday {
+  height: 26px;
+  width: 26px;
+  padding: 0 10px;
+  line-height: 26px;
+  border: 2px solid transparent;
+  text-transform: uppercase;
+  font-size: 10px;
+  color: #000;
+}
+#dashboard .calendar .table-date {
+  cursor: default;
+  color: #2b2b2b;
+  height: 26px;
+  width: 26px;
+  font-size: 15px;
+  padding: 10px;
+  line-height: 26px;
+  text-align: center;
+  border-radius: 50%;
+  border: 2px solid transparent;
+  transition: all 250ms;
+  position: relative;
+}
+#dashboard .calendar .table-date:not(.nil):hover {
+  border-color: #1c2938;
+}
+#dashboard .calendar .current-day {
+  border-color: #1c2938;
+}
+#dashboard .calendar .event-date {
+  border-color: #cd3f3e;
+}
+#dashboard .calendar .event-date:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  content: "";
+  background: #cd3f3e;
+}
+#dashboard .calendar .active-date {
+  background: #1c2938;
+  color: #fff;
+}
+#dashboard .calendar .event-date.active-date {
+  background: #1c2938;
+}
+#dashboard .calendar .btn#add-button {
+  display: block;
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+}
+#add-button:hover,
+#ok-button:hover,
+#cancel-button:hover {
+  transform: scale(1.03);
+}
+
+/* Events display */
+#dashboard .events {
+  overflow-y: scroll;
+}
+@media (max-width: 767.98px) {
+  #dashboard .events-container {
+    height: auto;
+  }
+}
+#dashboard .event-card {
+  margin-top: 10px;
+  padding: 20px 10px;
+  max-width: 100%;
+  display: block;
+  background: #1c2938;
+  border: none !important;
+  border-radius: 10px;
+}
+#dashboard .event-name,
+#dashboard .event-details,
+#dashboard .event-link {
+  padding: 0 10px;
+  color: #f4f6f6;
+}
+#dashboard .event-name,
+#dashboard .event-cancelled {
+  display: inline-block;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+#dashboard .event-cancelled {
+  color: #cd3f3e;
+}
+
+/* Event Dialog */
+
+#dashboard .dialog {
+  padding: 30px 0;
+  background: #f4f6f6;
+}
+#dashboard .dialog.card {
+  box-shadow: none;
+}
+@media (max-width: 767.98px) {
+  #dashboard .dialog {
+    width: 100%;
+  }
+}
+#dashboard .dialog .dialog-heading {
+  color: #1c2938;
+  text-align: center;
+  font-size: 28px;
+}
+#dashboard .dialog .form-container {
+  margin-top: 15%;
+}
+#dashboard .dialog .form-label {
+  text-transform: uppercase;
+  font-size: 13px;
+  letter-spacing: 1px;
+  color: #1c2938;
+}
+#dashboard .dialog .input {
+  border: none;
+  background: none;
+  border-bottom: 1px rgb(28, 41, 56, 0.3) solid;
+  display: block;
+  margin-bottom: 20px;
+  width: 300px;
+  height: 20px;
+  text-align: center;
+  color: #1c2938;
+}
+#dashboard .input:focus {
+  outline: none;
+  border-color: #1c2938;
+}
+#dashboard .error-input {
+  border-color: #cd3f3e !important;
+}
+
+/* Shortcuts */
+#dashboard .shortcut {
+  background-color: #cd3f3e;
+  box-shadow: none;
+}
+#dashboard .shortcut:hover {
+  background-color: #1c2938;
+}
+#dashboard .shortcut a:hover {
+  transform: scale(1.03);
+}
+
+#dashboard .shortcut h5 {
+  color: #fff;
+}
+#dashboard .shortcut i {
+  font-size: 25px;
+  color: #fff;
+}
+
+/* Edit Profile */
+#profile .section.top {
+  margin-top: 80px;
+}
+#profile .section h1 {
+  color: #1c2938;
+  border-bottom: 1px solid #1c2938;
+}
+@media (min-width: 1537px) {
+  #profile .card {
+    margin-top: 5rem;
+  }
+}
+#profile .profile-picture img {
+  border-radius: 50%;
+}
+#profile .card {
+  box-shadow: 0 0 20px 0 rgb(28, 41, 56, 0.9);
+}
+#profile .form-control,
+#profile .dataTable-input {
+  color: #1c2938;
+  border: 1px solid #c5ccd6;
+}
+#profile .plan {
+  border-left-width: 0.5rem;
+  border-left-color: #1c2938 !important;
+}
+#profile .payment {
+  border-left-width: 0.5rem;
+  border-left-color: #cd3f3e !important;
+}
+#profile .payment .cancel {
+  background-color: #cd3f3e;
+  color: #fff;
+  border-radius: 10px;
+}
+#profile .btn-danger {
+  color: #000;
+  background-color: #f1e0e3;
+}
+
+/* Tracker */
+
+#tracker .heading {
+  background-image: linear-gradient(to right, #cd3f3e 0%, #1c2938 100%);
+  padding: 1rem 0 3rem;
+}
+#tracker .sections {
+  margin-top: -3rem;
+}
+@media (min-width: 1537px) {
+  #tracker .sections {
+    margin-top: 3rem;
+  }
+}
+#tracker .card {
+  box-shadow: 0 0 20px 0 rgb(28, 41, 56, 0.9);
+}
+#tracker .year-header {
+  text-align: center;
+  position: relative;
+}
+#tracker .year-header span {
+  display: inline-block;
+  font-size: 20px;
+  line-height: 41.5px;
+  color: #000;
+}
+#tracker .year-header .left-button,
+#tracker .year-header .right-button {
+  cursor: pointer;
+  width: 28px;
+  text-align: center;
+  position: absolute;
+  color: #cccccc !important;
+  transition: 0.3s;
+  font-size: 14px !important;
+}
+#tracker .year-header .left-button:hover,
+#tracker .year-header .right-button:hover {
+  color: #cd3f3e !important;
+}
+#tracker .year-header .left-button {
+  left: 0;
+}
+#tracker .year-header .right-button {
+  right: 0;
+}
+#tracker .months-table {
+  border-collapse: separate;
+  text-align: center;
+}
+#tracker .month {
+  cursor: default;
+  height: 26px;
+  width: 26px;
+  padding: 0 2px;
+  padding-top: 10px;
+  line-height: 26px;
+  text-transform: uppercase;
+  font-size: 15px;
+  color: #cccccc;
+  transition: all 250ms;
+}
+#tracker .month.active {
+  font-weight: 700;
+  color: #1c2938;
+}
+#tracker .month:hover {
+  color: #cd3f3e;
+}
+
+/* Coaches */
+#coaching .heading {
+  background-image: linear-gradient(to right, #cd3f3e 0%, #1c2938 100%);
+  padding: 1rem 0 3rem;
+}
+#coaching .sections {
+  margin-top: -3rem;
+}
+@media (min-width: 1537px) {
+  #coaching .sections {
+    margin-top: 3rem;
+  }
+}
+#coaching .card {
+  box-shadow: 0 0 20px 0 rgb(28, 41, 56, 0.9);
+  border: none;
+}
+#coaching header {
+  position: relative;
+  width: 100%;
+  height: 100px;
+  background-color: #1c2938;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+}
+#coaching .profile {
+  position: absolute;
+  left: 50%;
+  top: 30px;
+  margin-left: -65px;
+  z-index: 5;
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+#coaching .profile img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 130px;
+  height: auto;
+}
+#coaching .name {
+  position: relative;
+  margin: 80px 0 10px;
+  color: #1c2938;
+  text-align: center;
+}
+#coaching .role {
+  position: relative;
+  margin: 0 0 30px;
+  color: #cd3f3e;
+  text-align: center;
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -15px;
+    left: 50%;
+    margin-left: -15px;
+    width: 30px;
+    height: 1px;
+    background: #1c2938;
+  }
+}
+#coaching .description p {
+  padding: 0 1rem 2rem;
+  text-align: center;
+  line-height: 1.5;
+  color: #777;
+}
+#coaching .choose .fa {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  line-height: 59px;
+  overflow: hidden;
+  text-align: center;
+  border: 2px solid #cd3f3e;
+  border-radius: 50%;
+}
+#coaching .choose .fa:hover {
+  background-color: #cd3f3e;
+  color: #fff;
+}
+#coaching .top .fa {
+  position: relative;
+  width: 30px;
+  height: 30px;
+  line-height: 27px;
+  overflow: hidden;
+  text-align: center;
+  color: #cd3f3e;
+  border: 2px solid #cd3f3e;
+  border-radius: 50%;
+}
+#coaching footer {
+  position: relative;
+  padding: 1rem;
+  background-color: #1c2938;
+  text-align: center;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  &::before {
+    content: "";
+    position: absolute;
+    top: -27px;
+    left: 50%;
+    margin-left: -15px;
+    border: 15px solid transparent;
+    border-bottom-color: #1c2938;
+  }
+}
+#coaching footer a {
+  padding: 0 1rem;
+  color: #e2e2e2;
+  transition: color 0.4s;
+}
+#coaching footer a:hover {
+  color: #cd3f3e;
+}
+
+/* Workout & Nutrition */
+
+#workout-nutrition .heading {
+  background-image: linear-gradient(to right, #cd3f3e 0%, #1c2938 100%);
+  padding: 1rem 0 3rem;
+}
+#workout-nutrition .sections {
+  margin-top: -3rem;
+}
+@media (min-width: 1537px) {
+  #workout-nutrition .sections {
+    margin-top: 3rem;
+  }
+}
+#workout-nutrition .card {
+  box-shadow: 0 0 20px 0 rgb(28, 41, 56, 0.9);
+}
+#workout-nutrition .color-1 {
+  border-left-width: 0.5rem;
+  border-left-color: #cd3f3e !important;
+}
+#workout-nutrition .color-2 {
+  border-left-width: 0.5rem;
+  border-left-color: #1c2938 !important;
+}
+#workout-nutrition .day:hover {
+  background-color: #ff9c91;
+}
+#workout-nutrition .day.active {
+  background-color: #ff9c91;
+  &::after {
+    position: absolute;
+    top: 50%;
+    bottom: 10px;
+    right: -9px;
+    width: 0;
+    height: 0;
+    margin-top: -10px;
+    content: "";
+    border-style: solid;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent #ff9c91;
+  }
+}
+#workout-nutrition i {
+  cursor: pointer;
+  color: #1c2938;
+}
+#workout-nutrition .form-control {
+  width: 340px;
+}
+#workout-nutrition .fa-arrow-up-right-from-square {
+  color: #cd3f3e;
+}
+#workout-nutrition .fa-arrow-up-right-from-square:hover {
+  color: #1c2938;
+}
+
+/* QR Code Access */
+
+#gym-access .heading {
+  background-image: linear-gradient(to right, #cd3f3e 0%, #1c2938 100%);
+  padding: 1rem 0 3rem;
+}
+#gym-access .sections {
+  margin-top: -3rem;
+}
+@media (min-width: 1537px) {
+  #gym-access .sections {
+    margin-top: 3rem;
+  }
+}
+#gym-access .card {
+  box-shadow: 0 0 20px 0 rgb(28, 41, 56, 0.9);
+}
+#gym-access ul li {
+  list-style: none;
+}
+#gym-access .active {
+  color: green;
 }
