--- a/Frontend/stayfit/public/styles.css
+++ b/Frontend/stayfit/public/styles.css
@@ -2313,3 +2313,32 @@ p {
 #gym-access .active {
   color: green;
 }
+
+/* Clients */
+
+#clients .heading {
+  background-image: linear-gradient(to right, #cd3f3e 0%, #1c2938 100%);
+  padding: 1rem 0 3rem;
+}
+#clients .sections {
+  margin-top: -3rem;
+}
+@media (min-width: 1537px) {
+  #clients .sections {
+    margin-top: 3rem;
+  }
+}
+#clients .card {
+  box-shadow: 0 0 20px 0 rgb(28, 41, 56, 0.9);
+  margin: 10px;
+}
+#clients .user:hover,
+#clients .user:focus {
+  background-color: #ff9c91;
+}
+#clients .profile img {
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  object-fit: cover;
+}
