--- a/Frontend/stayfit/public/styles.css
+++ b/Frontend/stayfit/public/styles.css
@@ -1668,6 +1668,29 @@ p {
   }
 }
 
+#chat {
+  position: fixed;
+  padding: 1rem 1.5rem;
+  bottom: 0;
+  right: 0;
+  background-color: transparent;
+  z-index: 100;
+}
+
+#chat img {
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  border-radius: 50%;
+  overflow: hidden;
+  object-fit: cover;
+}
+
+#__talkjs_launcher {
+  background-color: #1c2938;
+}
+
 /* Dashboard */
 
 .content-background {
